<resources>
    <string name="app_name">建筑机械平台</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="username">手机号</string>
    <string name="factorycode">工厂代码</string>
    <string name="version">版本号: 1.0</string>
    <string name="title_activity_personal_dara">PersonalDaraActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resetPwdHint">密码由6-16个字符组成，区分大小写。</string>
    <string name="oldPwd">旧密码(必填)</string>
    <string name="newPwd">新密码(必填,区分大小写)</string>
    <string name="confirmPwd">确认新密码</string>
    <string name="change">修改</string>
</resources>
