<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary"
        android:paddingLeft="10dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:paddingRight="10dp"
            android:src="@drawable/arrow_back" />


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="#fff"
            android:text="修改密码"
            android:textSize="20sp" />

        <!--<ImageView-->
        <!--android:id="@+id/iv_option"-->
        <!--android:layout_width="26dp"-->
        <!--android:layout_height="26dp"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:background="@drawable/option"-->
        <!--android:onClick="onRight" />-->
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/resetPwdHint"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_old_pwd"
        style="@style/EditText"
        android:drawableStart="@drawable/psw"
        android:hint="@string/oldPwd">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/et_new_pwd1"
        style="@style/EditText"
        android:drawableStart="@drawable/psw"
        android:hint="@string/newPwd"
        android:inputType="textPassword" />


    <EditText
        android:id="@+id/et_new_pwd2"
        style="@style/EditText"
        android:drawableStart="@drawable/psw"
        android:hint="@string/confirmPwd"
        android:inputType="textPassword"
        />


    <Button
        android:id="@+id/btn_reset"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_btn_login_selector"
        android:onClick="onClick"
        android:text="@string/change"
        android:textColor="#FFFFFF" />

</LinearLayout>