<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login"
    android:orientation="vertical"
    tools:context="com.powtronic.constructionplatform.activity.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="建筑机械网络\n平台"
        android:textColor="#cffa"
        android:textSize="45sp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.6"
        android:orientation="vertical"
        android:weightSum="1">


        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edittext_selector"
            android:contentDescription="EditText_username"
            android:drawableLeft="@drawable/username"
            android:singleLine="true"
            android:drawablePadding="10dp"
            android:hint="@string/username"
            android:paddingLeft="8dp"
            />

        <EditText
            android:id="@+id/et_psw"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edittext_selector"
            android:contentDescription="EditText_password"
            android:drawableLeft="@drawable/psw"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="8dp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/bg_btn_login_selector"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            >

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="快速注册"
                android:textColor="#eee" />

            <TextView
                android:id="@+id/tv_findPsw"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="找回密码"
                android:visibility="gone"
                android:textColor="#eee" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="3dp"
        android:text="©2012-2016 Powtronic"
        android:textColor="#fff"
        />

</LinearLayout>
